[package]
name = "nilai"
version = "0.1.0"
authors = ["பாலாஜி ஜின்னா <balaji@dgraph.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.13.7"
serde = { version = "1.0", features = ["derive"]}
futures-preview = "0.3.0-alpha.17"
log = "0.4"
runtime = "0.3.0-alpha.6"
futures-timer = "0.3"
rand = "0.7"
tokio = "0.2.0-alpha.1"
failure = "0.1.5"
num = "0.2.0"
num-derive = "0.2.5"
num-traits = "0.2"
enumn = "0.1.1"
enum_primitive = "0.1.1"
num_enum = "0.4.1"
tokio-net = "0.0.0"
simplelog = "0.7.1"
runtime-tokio = "0.0.0"